Bug 100809 - UI: Paragraph styles drop-down list on formatting toolbar not closing.
Summary: UI: Paragraph styles drop-down list on formatting toolbar not closing.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-07-08 09:08 UTC by Daveo
Modified: 2016-10-25 18:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture (47.69 KB, image/png)
2016-07-08 09:08 UTC, Daveo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daveo 2016-07-08 09:08:15 UTC
Created attachment 126123 [details]
Screen capture

Selecting "Edit Style" from the paragraph style drop-down list on the formatting toolbar opens the paragraph dialog, but does not close the drop-down list.

This makes it possible to repeatedly open more paragraph style dialogs and intentionally, or otherwise, apply any available style to the focused paragraph.

The attached screen capture illustrates the issue.

I have not had the opportunity to test on Linux yet.

I am not sure if this is a regression, or an undocumented 5.2 feature. I see it as a regression, but if a new 5.2 feature it is "interesting", but pretty useless and confusing.

Dave
Comment 1 Joel Madero 2016-07-08 14:20:00 UTC
Version: 5.3.0.0.alpha0+
Build ID: dc4797a79e3f465e1fa930be7c69d8ec7d91c15e
CPU Threads: 2; OS Version: Linux 3.16; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: group

Confirmed.

Marking as:
Trivial: No real impact at all on professional quality work.
Lowest: Default for trivial issues


If this is a regression can you leave a comment indicating what version it worked in before?
Comment 2 Joel Madero 2016-07-08 14:21:10 UTC
works in:
Version: 5.1.4.2

Bumping to low.
Comment 3 Commit Notification 2016-07-09 20:02:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=563dd59cdf84be980f4e0e2fb12566dd7e4a1633

Resolves: tdf#100809 Paragraph styles drop-down list

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-07-15 12:55:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b46fbedb4d41750b72b76b12350904d344100811&h=libreoffice-5-2

Resolves: tdf#100809 Paragraph styles drop-down list

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.