Resolves: tdf#100809 Paragraph styles drop-down list

Change-Id: I9453c3c877dcd39268f7c910e8918947bdeb8fd4